<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >

            <ImageView
                android:id="@+id/login_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/pic2"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"/>
            <EditText
                android:layout_marginTop="24dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_mail"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/login_img"
                android:background="@drawable/entered"
                android:hint="@string/enter_your_email_address"
                android:textSize="24sp"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                />

            <EditText
                android:layout_marginTop="24dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/login_mail"
                android:background="@drawable/entered"
                android:hint="@string/enter_your_password"
                android:textSize="24sp"
                android:inputType="textPassword"
                android:padding="8dp"
                android:drawableStart="@drawable/ic_lock_open_black_24dp"
                android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                />
            <TextView
                android:layout_marginTop="24dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_forgot_password"
                android:layout_centerHorizontal="true"
                android:textAlignment="textEnd"
                android:gravity="end"
                android:layout_below="@+id/login_password"
                android:text="@string/forgot_my_password"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="8dp"

                />
            <Button
                android:id="@+id/login_button"
                android:layout_below="@id/login_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="8dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textColor="@android:color/background_light"
                />
            <TextView
                android:layout_marginTop="24dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_new_account"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_below="@+id/login_button"
                android:text="@string/create_new_account"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="8dp"

                />

            <TextView
                android:layout_marginTop="24dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/enter_with_another_method"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_below="@+id/create_new_account"
                android:text="@string/enter_with_another_method"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="8dp"

                />
            <Button
                android:id="@+id/enter_with_phone"
                android:layout_below="@id/enter_with_another_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="8dp"
                android:text="@string/sign_in_with_phone"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textColor="@android:color/background_light"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>