<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/pic2"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"/>
    <EditText
        android:layout_marginTop="24dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_mail"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/register_img"
        android:background="@drawable/entered"
        android:hint="@string/enter_your_email_address"
        android:textSize="24sp"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        />

    <EditText
        android:layout_marginTop="24dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/register_mail"
        android:background="@drawable/entered"
        android:hint="@string/enter_your_password"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:padding="8dp"
        android:drawableStart="@drawable/ic_lock_open_black_24dp"
        android:drawableLeft="@drawable/ic_lock_open_black_24dp"
        />
    <Button
        android:id="@+id/register_button"
        android:layout_below="@id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="8dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textColor="@android:color/background_light"
        />
    <TextView
        android:layout_marginTop="24dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/have_account"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_below="@+id/register_button"
        android:text="@string/i_have_already_account"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="8dp"

        />

</RelativeLayout>